--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -750,6 +750,8 @@
         right: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="5" y1="7" x2="13" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="3" y1="11" x2="13" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>'
       };
 
+      let blockElFromSource = null;
+
       // Load editor state from source JSON (compiler format)
       function loadFromSource(sourceData) {
         // Restore basic fields
@@ -758,7 +760,7 @@
         pageTypeSelect.value = sourceData.pageType || 'post';
 
         // Helper to create a block element from source data
-        function blockElFromSource(block) {
+        blockElFromSource = function(block) {
           if (block.type === 'bloglist') {
             return createBlockElement('bloglist');
           }
@@ -1017,7 +1019,7 @@
           }
           // paragraph
           return createBlockElement('paragraph', null, inlineNodesToHtml(block.children));
-        }
+        };
 
         // Restore blocks from content array
         blockEditor.innerHTML = '';
@@ -1524,7 +1526,7 @@
           copyBtn.addEventListener('click', () => {
             const data = serializeBlock(block);
             const clone = blockElFromSource(data);
-            block.parentNode.insertBefore(clone, block.nextSibling);
+            insertBlockDirectlyBelow(block, clone);
             debouncedPreview();
           });
           actions.appendChild(copyBtn);
@@ -2314,6 +2316,26 @@
           blockEditor.insertBefore(block, blocks[newIndex]);
         } else {
           blockEditor.insertBefore(block, blocks[newIndex].nextSibling);
+        }
+      }
+
+      function insertBlockDirectlyBelow(referenceBlock, newBlock) {
+        const parent = referenceBlock?.parentElement;
+        if (!parent || !newBlock) return;
+
+        const blockSiblings = Array.from(parent.children).filter(el => el.classList?.contains('block-item'));
+        const index = blockSiblings.indexOf(referenceBlock);
+
+        if (index === -1) {
+          parent.appendChild(newBlock);
+          return;
+        }
+
+        const nextBlock = blockSiblings[index + 1] || null;
+        if (nextBlock) {
+          parent.insertBefore(newBlock, nextBlock);
+        } else {
+          parent.appendChild(newBlock);
         }
       }
 
